@@ -25,14 +25,19 @@ tasks.withType<JacocoReport> {
 
 tasks.withType<Test>().all {
     systemProperty("org.slf4j.simpleLogger.defaultLogLevel", "debug")
-    jvmArgs("-Xmx6G", "-XX:+UseG1GC", "-XX:MaxMetaspaceSize=1024M", "-Xss4M")
-    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED",)
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
     // Parallel streams rely on the shared ForkJoinPool.commonPool(),
     // which is automatically sized to the number of available processors minus one.
     // GitHub runners (typically 2-core) generally have fewer worker threads than dev machines,
     // Set this pool to use two threads for consistenty across machines.
-    jvmArgs("-Djava.util.concurrent.ForkJoinPool.common.parallelism=2")
+    systemProperty("java.util.concurrent.ForkJoinPool.common.parallelism", "2")
+    jvmArgs("-Xmx6G", "-XX:MaxMetaspaceSize=1024M", "-Xss4M", "-XX:+UseZGC")
+    jvmArgs("-XX:+UseCompactObjectHeaders")
+    jvmArgs("-XX:+UseCompressedOops")
+    jvmArgs("-XX:ObjectAlignmentInBytes=16")
+    jvmArgs("-XX:+UseNUMA")
+    jvmArgs("-XX:+UseStringDeduplication")
+    jvmArgs("--add-opens=java.base/java.nio=ALL-UNNAMED")
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 
     val osName = System.getProperty("os.name").lowercase()
     val libPath = file("${rootDir.path}/studio/src/universal/bin").absolutePath
